# bilagbot

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.git-crypt/keys/default/0/: CA1E41D13067550891949E067F35459C441CBC8B.gpg
.github/workflows/: issue-notify.yml  test.yml
docs/: brand-guide.md  fiken-mapping.md
nginx/: default.conf
src/bilagbot/: __init__.py  __main__.py  classifier.py  cli.py  config.py  database.py  exceptions.py  fiken.py  models.py  review.py  scanner.py  web.py
src/bilagbot/static/: index.html
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_database.py  test_fiken.py  test_models.py  test_review.py  test_scanner.py  test_web.py
tests/fixtures/: claude_response_known.json  claude_response_unknown.json
